# textgres

./: .gitignore  README.md  pyproject.toml
src/textgres/: __main__.py  app.py  connection.py  textgres.scss
src/textgres/widgets/: center_middle.py  confirm_modal.py  data_table.py  text_area.py  tree.py
src/textgres/widgets/connections/: connection_modal.py  navigator.py  new_connection_modal.py
src/textgres/widgets/query/: query_area.py
src/textgres/widgets/results/: results_area.py  results_table.py
